<resources>
    <string name="app_name">LLMStumbler</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_message">Are you sure to clear?</string>
    <string name="action_result_clipboard">Result</string>
    <string name="action_result_copy">Copy</string>
    <string name="action_result_paste">Paste</string>
    <string name="action_result_paste_message">Are you sure to paste?</string>
    <string name="action_result_shaping">Shaping</string>
    <string name="action_file">File</string>
    <string name="action_load_default_whitelist">Load default white lists</string>
    <string name="action_load_default_whitelist_message">Are you sure to load default white lists?</string>
    <string name="action_log_clear">Clear</string>
    <string name="action_log_clear_message">Are you sure to clear?</string>
    <string name="action_log_load">Load</string>
    <string name="action_log_load_message">Are you sure to load?</string>
    <string name="action_log_save">Save</string>
    <string name="action_scan">Scan</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_read_file">Cannot write file</string>
    <string name="cannot_write_file">Cannot write file</string>
    <string name="file_not_found">File not found</string>
    <string name="list_bs">List(BS):</string>
    <string name="list_lte">List(LTE):</string>
    <string name="list_wifi">List(WiFi):</string>
    <string name="location_name">Location Name:</string>
    <string name="ok">OK</string>
    <string name="permission_denied">You must allow this app to access the wifi and location information.</string>
    <string name="result">Result:</string>
    <string name="white_list">White List:</string>
    <string name="white_list_bs">White List(BS):</string>
    <string name="white_list_lte">White List(LTE):</string>
    <string name="white_list_wifi">White List(WiFi):</string>
    <string name="white_list_bs_value"></string>
    <string name="white_list_lte_value"></string>
    <string name="white_list_wifi_value">"@"GinzaFree,.Free Wi-Fi for Application,.FREE_Wi-Fi_PASSPORT,00-Chiba_Museum_Free_Wi-Fi,00-FREE_Wi-Fi_Sendai_Airport,00-Shisui_Town_Free_Wi-Fi,00-Sosa_City_Free_Wi-Fi,00-Urayasu_Free_Wi-Fi,0000docomo,0000FLETS-PORTAL,0000Shibuya_City,0000Shibuya_City_01,0000Visit_SHIBUYA,0001docomo,0001softbank,0002softbank,00_MEGAWEB_Free_Wi-Fi,00_Toyokawa_City_Wi-Fi,01_Funabashi_Free_Wi-Fi,02_Funabashi_Free_Wi-Fi,138_Ichinomiya_Free_Wi-Fi,1ST-AVENUE_FREE,2020 dynac-japan Free Wi-Fi,2020JUNJO_FREE_Wi-Fi,2020Shinagawa_Free_Wi-Fi,2020Toshima_Free_Wi-Fi,2020Toshima_Free_Wi-Fi_01,2020Ueno_Free_Wi-Fi,7SPOT,"@"GinzaFree_Lite,AEONMALL,AICHI-HIGASHIURA_Free_Wi-Fi,Aichi_KASUGAI_FREE_Wi-Fi,akan-free-WiFi,Akigawa_Keikoku_Free,Akihabara_Free_Wi-Fi,AKIHABARA_UDX_Wi-Fi,akita-airport-free-wifi,ALPICO_FREE_Wi-Fi,ana,Anamizu_Free_Wi-Fi,Antlers_Wi-Fi,Aomoriken_Free_Wi-Fi,App_Tokushima_WiFi,AquaCityOdaibaFree,ARDIJA_FREE_Wi-Fi,Asago-City-WiFi,Asago_City_Wi-Fi,Asahi Town Wi-Fi,Asakawa Town WiFi,Asakura_Free_Wi-Fi,Asakura_Free_Wi-Fi_Plus,Asakusa_Free_Wi-Fi,atPARCO,atre_Free_Wi-Fi,au_Wi-Fi,au_Wi-Fi2,Avetica_Free_Wi-Fi,Azabu_10ban_Free-WiFi,Azumino Free Wi-Fi,Bataden_Wi-Fi,Bay Quarter Free Wi-Fi,Bay_Quarter_Free_Wi-Fi,BBON_FREE_Wi-Fi,Be.Okinawa_Free_Wi-Fi,Bic_Free_WiFi,BIGFUN_Free_Wi-Fi,BIGS_FREE_Wi-Fi,Biwako_Free_Wi-Fi,Bunkyo_Free_Wi-Fi,BUS_Wi-Fi_ShonaiKotsu,CANAL_CITY,Cenova_Free_Wi-Fi,CHICHIBU-OMOTENASHI-FREE-Wi-Fi,CHICHIBU_OMOTENASHI_FREE_Wi-Fi,Chikuma_Free_Wi-Fi,CHIYODA_Free_Wi-Fi,CHIYODA_Free_Wi-Fi_01,Chofu_Free_Wi-Fi_Plus,Chuo_City_Free_Wi-Fi,chuokotsu_free_Wi-fi,Churaumi_Free_WiFi,CIAL_FREE_Wi-Fi,COMS_GARDEN_Free_Wi-Fi,daiei_free_Wi-Fi,Dazaifu_City_Wi-Fi,Denbill_Free_Wi-Fi,Dominos_Free_Wi-Fi,DoSPOT-FREE,Echizen_FREE_Wi-Fi,Eiheiji_Free_Wi-Fi,Emion_Free_Wi-Fi,Enjoy_Free_Wi-Fi,Enoden_Free_wifi,Enoshima_Aquarium_WiFi,Famima_Wi-Fi,favore_free_wifi,Ferry-ZAMAMI_Free_Wi-Fi,ForApp_MSP_Free_Wi-Fi_2,FREE YUZAWi-fi,Free_Koza_Wi-Fi_Okinawa_City,FREE_Wi-Fi_and_TOKYO,Free_Wi-Fi_ATAMI,FreeWiFi-MIE,FreeWiFi-MIE_01,FreeWiFi-NARITA,FreeWiFi"@"KIXRV,FreeWiFi_FUKUI,FRONTALE_FREE_Wi-Fi,FUCHU_City_Free_Wi-Fi,FUCHU_City_Free_Wi-Fi_Plus,FUJIIDERA_FREE_Wi-Fi,FujisanWHCWi-Fi,FUJISAWA-Free-WiFi,FUJISAWA_Free_WiFi,fukaura-town-free-wi-fi,Fukuoka_City_Wi-Fi,Fukuoka_City_Wi-Fi_Cruise,Fukushima City Wi-Fi,FukushimaAirport_FreeWi-Fi,Fuse_Sports_Park_Free_Wi-Fi,Gifu-City Free Wi-Fi,Gifu-City_Free_Wi-Fi,GinzaLion-wifi,GINZAN_FREE_Wi-Fi,Hachioji_Free_Wi-Fi,Hagi_Free_Wi-Fi,Hakusan_Free_Wi-Fi,HANAYASHIKI,HANEDA-FREE-WIFI,HANKYU_BUS_Free_Wi-Fi,Hanno Free Wi-Fi,HARAJUKU_QUEST,Higashikurume_City_Wi-Fi,Higashikurume_City_Wi-Fi_Plus,Higashimatsuyama_Free_Wi-Fi,Higashimatsuyama_Free_Wi-Fi_Plus,Higashimiyoshi_Free_Wi-Fi,Hills-WiFi,HIMEJI_Wi-Fi,Hinohara_Free_Wi-Fi,Hiroshima_Free_Wi-Fi,Hiroshima_Free_Wi-Fi_Lite,Hiroshima_Free_Wi-Fi_Lite2,Hyogo_Free_Wi-Fi,Hyogo_Free_Wi-Fi_Lite,ibaraki-nissan.Free Wi-Fi,IBIGAWA_Free_Wi-Fi,IBIGAWA_Free_Wi-Fi_Honmachi,Ikeda_Wine_Castle,Inagi_Free_Wi-Fi,Inagi_Free_Wi-Fi_Plus,Ine_Town_Free_Wi-Fi,ISETAN_SHINJUKU_WiFi,ISP_FREE-WiFi,ITAKO Free Wi-Fi,Itochan_Bus_Free_Wi-Fi,ITOCiA_Free_Wi-Fi,Iwaizumi_Free_Wi-Fi_02,IWATAYA_Wi-Fi,Izumi-FreeWifi,IZUNOKUNI_FREE_Wi-Fi,IzuOshima_Free_Wi-Fi,JAPAN-FREE-WIFI,Japan._Free_Wi-Fi_KYOTO,JCW_Wi-Fi_PARCO,Jindaiji_Free_Wi-Fi,Jindaiji_Free_Wi-Fi_Plus,JOETSU,JOINUS-Free-WiFi,JOINUS_Free_WiFi,JR-Central_FREE,JR-EAST_FREE_Wi-Fi,JR_TOWER_FREE_WiFi,JRBus_Tohoku_Free_Wi-fi,JRbuskanto_free_Wi-Fi,JUMBO_TOURS_FREE_WIFI,JW_App_Only_Ishikawa,Kabukicho_Free_Wi-Fi,Kaga_Kamomaru_Free_Wi-Fi,KAGAWA-WiFi,KAGAWA-WiFi_Takamatsu,Kagoshima-Airport_Wi-Fi,Kagoshima_Free_Wi-Fi,KagoshimaCity-Free-Wi-Fi,kagurazaka_free_Wi-Fi,Kamakura_Free_Wi-Fi_2,Kanazawa_Free_Wi-Fi,Kanazawa_Free_Wi-Fi_Lite,KANSAI-WIFI,Kappabashi_Free_Wi-Fi,KARIO_FREE_Wi-Fi,Kariyushi_Hotels_Free_Wi-Fi,Kasaoka_Free_Wi-Fi,Katori_Free_Wi-Fi,KatsurenJo_Free_Wi-Fi,Katsushika_Free_Wi-Fi,Kawagoe_Free_Wi-Fi,Kawagoe_Free_Wi-Fi_Plus,Kawajima_Free_Wi-Fi,Kawasaki-City-WiFi,Kawasaki-City-WiFi-GR,Kawasaki-Museum-WiFi,Kawasaki_City_WiFi,KAWATOKU-FreeWiFi,Kawazu_Zakura_Wi-Fi,KEIDANREN,KEIHANBUS_Free_Wi-Fi,Keikyu-Store_Free,KEIKYU_FREE_Wi-Fi,KEIO_FREE_Wi-Fi,KEISEI_FREE_Wi-Fi,Keiseibus,KENCHOJI_FREE_WI-FI,KFC_FREE_Wi-Fi,Kikai_Free_Wi-Fi,Kikonai_Town_Free_Wi-Fi,KINTETSU_Free_Wi-Fi,Kirinjishi_Free_Wi-Fi,Kisarazu_Free_Wi-Fi,KITASHIOBARA_Free_Wi-Fi,Kiyosu_Free_Wi-Fi,Kiyosu_Free_Wi-Fi_Lite,KochiCastleFreeWi-Fi_withDoSPOT,KOFU_SAMURAI_Wi-Fi,KOFU_SAMURAI_Wi-Fi_h,Koga_City_Free_Wi-Fi,Komeda_Wi-Fi,Komoro_Free_Wi-Fi,Koriyama City Wi-Fi,Koriyama city WiFi,KORYO_Free_Wi-Fi,Koyasan_Free_Wi-Fi,Kozaki_Free_Wi-Fi,Kumagaya_Free_Wi-Fi,kumamoto-free-wifi,Kunitachi_Free_Wi-Fi,Kurashiki_Free_Wi-Fi,Kurume_City_Wi-Fi,KUSHIRO_Town_Wi-Fi,Kuwana_Free_Wi-Fi,Kyushu_Free_Wi-Fi,Kyushu_Free_Wi-Fi_fukuoka001,LACHIC_WiFi,LACITTADELLA_WiFi,Laforet_FREE,Laforet_FREEi,LAWSON_Free_Wi-Fi,LetsEnjoy KaminoyamaCity,LIMOTAXI_FREE,Linimo_Free_Wi-Fi,Lions_Wi-Fi,LOTTERIA_Free_Wi-Fi,LUMINE_Free_Wi-Fi,Makuhari_Free_Wi-Fi,Makuhari_Free_Wi-Fi_Light,Maniwa_Free_Wi-Fi,MARINE_AND_WALK_YOKOHAMA,Marinoa_City,MARUI_IMAI_SAPPORO_Wi-Fi,Marumori Free Wi-Fi,Matsumoto_City_Free_Wi-Fi,Matsushima_Free_Wi-Fi,Matsushima_Free_Wi-Fi_01,MATSUYA_Wi-Fi,Matsuyama_Free_Wi-Fi,mcd-free,MEIEKI_Free_Wi-Fi,meimon_taiyo_ferry,MEITETSU_FREE_Wi-Fi,Meitetsu_Wi-Fi,Messe_Free_Wi-Fi,Metro_Free_Wi-Fi,MIC_FREE_Wi-Fi,MICHI-NO-EKI,Midtown_Free_Wi-Fi,MieKotsu_FreeWi-Fi,miharu town Wi-Fi,Minakami-Town_Wi-Fi,minamisoma_free_wi-fi,Minamitane_Free_Wi-Fi,Minato_City_Wi-Fi,Minato_City_Wi-Fi_01,Mino-Free_Wi-Fi,Miraikan_Free_Wi-Fi,MISHIMA_FREE_Wi-Fi,Mitake_Free_Wi-Fi,MITSUKOSHI_FUKUOKA_Wi-Fi,MITSUKOSHI_GINZA_WiFi,MITSUKOSHI_NIHOMBASHI_WiFi,MITSUKOSHI_SAKAE_WiFi,MITSUKOSHI_SAPPORO_Wi-Fi,MIYAGI_Free_Wi-Fi,MIYAGI_Free_Wi-Fi_01,MIYAGI_Free_Wi-Fi_02,MIYAKO_FREE_Wi-Fi,Miyazaki_Free_Wi-Fi,Miyazaki_Free_Wi-Fi_Lite,miyoshi_free,MIZUNAMI_Free_Wi-Fi,mobilepoint,MODI_Free_Wi-Fi,Motomachi_free_Wi-Fi,mozoFreeWiFi,MSP_Free_Wi-Fi,Munakata_Free_Wi-Fi,Nagai City Wi-Fi,Nagano_City_Free_Wi-Fi,Nagaoka_city_Free_Wi-Fi,Nagareyama_Honcho_Free_Wi-Fi,nagasaki_bus_free_wi-fi,Nagasaki_City_Wi-Fi,Nagasaki_Port_Wi-Fi,NAGOYA-Umaimon_FREE,NAHA_CITY_FREE_Wi-Fi,NAMBA_NANNAN_Free_Wi-Fi,NAMBA_Walk_Free_Wi-Fi,nanjo_city_free_wi-fi,NARA_City_Wi-Fi,NARA_Free_Wi-Fi,NARA_Free_Wi-Fi_Lite,NARA_Free_Wi-Fi_Lite_NTT,Naruto_Free_Wi-Fi,Nasu_Town_Free-WiFi,Navita_Wi-Fi,ndanda_NTT_FreeWi-Fi,NewChitose_Airport_Free_Wi-Fi,Nibangai-Free-Wi-Fi,Nihombashi_TONYAGAI_Free_Wi-Fi,Nihonbashi_Free_Wi-Fi,Nihonmatsu City Wi-Fi,Niigata_City_Free_Wi-Fi,Niigata_City_Free_Wi-Fi_Lite,Nikaho City Wi-Fi,Nishinihonjrbus_free_Wi-Fi,Nishinoomote_Free_Wi-Fi,NISHIO_Free_Wi-Fi,NISSAN_CROSSING_Free_Wi-Fi,Nissan_Free_Wi-Fi,NTT_MCT_Free-WiFi,NTTUD_Free_Wi-Fi,NUMAZU_FREE_Wi-Fi,OBANAZAWA_Free_Wi-Fi,OBUSE Free Wi-Fi,OBUSE_Free_Wi-Fi_Base,Oe town wifi,Ohi_Free_Wi-Fi,okayama_airport_free_Wi-Fi,Okayama_Korakuen_Free_Wi-Fi,OKAZAKI_Free_Wi-Fi,OKINAWA-FREE-Wi-Fi,Okinawa_Free_Wi-Fi,okinoshima_town_wi-fi,OKUTAMA_Free_Wi-Fi,OKUTAMA_Free_Wi-Fi_Lite,OKUWA-Free-Wi-Fi,OlOl_marui_Free_Wi-Fi,omotecho_Wi-Fi,Omotesando_Free_Wi-Fi,ono town free Wi-Fi,Ono_City_Free_Wi-Fi,Onsen_Oita_Wi-Fi,Onsen_Oita_Wi-Fi_City,Onsen_Oita_Wi-Fi_City_Central,osaka-airport-free-wifi,Osaka_Free_Wi-Fi,Osaka_Free_Wi-Fi_Lite,Osanbashi_Free_Wi-Fi,Ota_City_Free_Wi-Fi,Ota_City_Free_Wi-Fi_01,Otakitown_Yorokeikoku_Free_Wi-Fi,Oyama-Free-WiFi,Oyama_Free_WiFi,pacela_HIROSHIMA_Wi-Fi,PASEO_utsunomiya_Free_Wi-Fi,PremiumOutletsJP,PRONTO_FREE_Wi-Fi,RDC_FREE_WiFi,S-PAL_Free_WiFi,Saga-Airport_Wi-Fi,Saitama_Omotenashi_Wi-Fi,Sakae_Town_Free_Wi-Fi,SakuraCity_FreeWiFi,Sakuya-Wi-Fi,SANGO_Free_Wi-Fi,Sapporo-chikagai_FreeWi-Fi,Sapporo_City_Wi-Fi,Sapporo_Subway_Wi-Fi,Sasebo_Port_Free_Wi-Fi,SEIBU_FREE_Wi-Fi,Sekigahara_Free_Wi-Fi,SEKIKAWA_FREE_Wi-Fi,Senboku City Wi-Fi,Seto_City_Free_Wi-Fi,SETOUCHI_Free_Wi-Fi,SHABOTEN_GROUP_FREE_Wi-Fi,shapo_funabashi,shapo_koiwa,Shibata_City_Free_Wi-Fi,Shibuya_Free_Trial,Shinjuku-Bus-Terminal_Free_Wi-Fi,Shinjuku_Free_Wi-Fi,Shinjuku_Free_Wi-Fi_01,shinsaibashi,Shirakawa City Wi-Fi,Shirakawa_City_Wi-Fi_Plus,SHIRAKAWAGO_Free_Wi-Fi_Advanced,SHIROISHI FREE Wi-Fi,shIZUoka_FREE_Wi-Fi,Shizutetsu_Free_Wi-Fi,Shonanbank_Wi-Fi,SKYCIRCUS-WI-FI-JW,SKYLE_Free_Wi-Fi,SKYWALK_Wi-Fi,Sukagawa City Wi-Fi,Summit_Wi-Fi_Ise,SunshineAqua-Wi-Fi-JW,SWS1day,SYMPHONY_Free_Wi-Fi,Tachikawa_City_Free_Wi-Fi,Tachikawa_City_Free_Wi-Fi_Plus,Taito_Free_Wi-Fi,Takahama_Free_Wi-Fi,Takahashi_Free_Wi-Fi,Takarazuka_City_Wi-Fi,Takarazuka_City_WiFi,Takasaki_Free-WiFi,TAKASHIMAYA_Free_Wi-Fi,Tanohata_Free_Wi-Fi,TATEMACHI_FREE_Wi-Fi,Tateyama_Kurobe_free_Wi-Fi,Tatsuno_City_Wi-Fi,Tendo City Wi-Fi,TERMINA_Free_Wi-Fi,TGT_Kioicho_Wi-Fi,TNM_Free_Wi-Fi,Toba_Free_Wi-Fi,TOBU-Dept-WiFi,TOBU_Free_Wi-Fi,Toei_Bus_Free_Wi-Fi,Toei_Subway_Free_Wi-Fi,Tokyo-BigSight_Wi-Fi,Tokyo_Nakano_Free_Wi-Fi,Tokyo_Nakano_Free_Wi-Fi_Plus,TOKYO_OME_FREE_Wi-Fi,TOKYO_OME_FREE_Wi-Fi_Plus,TOKYO_ONE_PIECE_TOWER,TOKYOKOTSUKAIKAN_Free_Wi-Fi,TokyuBus_Free_Wi-Fi,Tomioka_Free_Wi-Fi,TOMOTETSU_Free_Wi-Fi,tonaki_free_wifi,totokankobus-Free_WiFi,tottori_BB_01,ToyosuCC_Free_Wi-Fi,TRADMEJIRO_WiFi,TreePicnic_Wi-Fi,Tsumago-Magome-east,Tsumago-Magome-west,Tsuruga_Free_Wi-Fi,Tsuruga_Free_Wi-Fi_Lite,Tsushima_City_Wi-Fi,TWR_Free_Wi-Fi,TX_Free_Wi-Fi,Uchiko_Free_Wi-Fi,UQ_Wi-Fi,Utsunomiya_City_Free_Wi-Fi,Utsunomiya_City_Free_Wi-Fi2,VEGALTA_FREE_Wi-Fi,WAKAYAMA_FREE_Wi-Fi,WAKAYAMA_FREE_Wi-Fi_LONG,WAKAYAMA_FREE_Wi-Fi_LONG2,WAKAYAMA_FREE_Wi-Fi_LONG_02,WAKAYAMA_FREE_WiFi_TANABE,Welcia_FREE_Wi-Fi,Whity_UMEDA_Free_Wi-Fi,Wi-Fi_square,Wi2,Wi2_club,Wi2premium,Wi2premium_club,WILLER_Free_Wi-Fi,WiWi_Fukui_City_Free_Wi-Fi,WiWi_Fukui_City_Free_Wi-Fi_Lite,WORLDPORTERS,yakappy_Wi-Fi,Yamaguchi_Bus_Free_Wi-Fi,Yamaguchi_Free_Wi-Fi,Yamaguchi_Free_Wi-Fi_Premium,Yamakoshi Free Wi-Fi,Yanagawa_Free_Wi-Fi,YEBISU_GARDEN_PLACE_Free-WiFi,Yokohama_Chinatown,YOKOHAMA_Free_Wi-Fi,YONABARU_Free_Wi-Fi,YUGAWA_Wi-Fi</string>
</resources>